Optimizacion/proyectoParser.java
// $ANTLR 3.5.2 proyecto.g 2025-05-18 14:14:25

    import java.util.HashMap;
    import java.util.HashSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class proyectoParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CDOUBLE", "CINT", "COMMA", "DOUBLE", 
		"FLOAT", "GUION_BAJO", "ID", "INT", "PRIVATE", "PROTECTED", "PUBLIC", 
		"SEMICOLON", "STRING", "VOID", "WS", "'('", "')'", "'*'", "'+'", "'-'", 
		"'/'", "'='", "'class'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int CDOUBLE=4;
	public static final int CINT=5;
	public static final int COMMA=6;
	public static final int DOUBLE=7;
	public static final int FLOAT=8;
	public static final int GUION_BAJO=9;
	public static final int ID=10;
	public static final int INT=11;
	public static final int PRIVATE=12;
	public static final int PROTECTED=13;
	public static final int PUBLIC=14;
	public static final int SEMICOLON=15;
	public static final int STRING=16;
	public static final int VOID=17;
	public static final int WS=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public proyectoParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public proyectoParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return proyectoParser.tokenNames; }
	@Override public String getGrammarFileName() { return "proyecto.g"; }


	    // Tablas de símbolos
	    HashMap TSG = new HashMap();
	    HashMap TSL = new HashMap();

	    // Tabla para BTA: 1 = estático, 0 = dinámico
	    HashMap<String, Integer> tablaBTA = new HashMap<>();

	    // Para seguimiento de funciones
	    HashMap<String, Integer> functionCallCount = new HashMap();
	    HashSet<String> definedFunctions = new HashSet();
	    HashSet<String> calledFunctions = new HashSet();

	    // Contadores de enteros
	    int cantidadEnteros = 0;
	    int cantidadEnterosGlobal = 0;

	    // Variable para rastrear la clase actual
	    String currentClassName;

	    // Método para verificar métodos especiales (main y constructores)
	    public boolean isSpecialMethod(String methodName, String className) {
	        return methodName.equals("main") || methodName.equals(className);
	    }
	    
	    // Registro de llamadas a funciones
	    public void registerFunctionCall(String className, String functionName) {
	        String fullName = className + "." + functionName;
	        if (definedFunctions.contains(fullName)) {
	            int count = functionCallCount.getOrDefault(fullName, 0);
	            functionCallCount.put(fullName, count + 1);
	            calledFunctions.add(fullName);
	        }
	    }

	    // Métodos para manejo de tablas de símbolos
	    public void pushTSG(String id, String tipo, int linea) {
	        Integer se_encuentra = (Integer) TSG.get(id);
	        if(se_encuentra==null) {
	            if(tipo.compareTo("int")==0)
	                TSG.put(id,1);
	            else if(tipo.compareTo("double")==0)
	                TSG.put(id,2);
	            else if(tipo.compareTo("class")==0)
	                TSG.put(id,3);
	        } else {
	            reportError("El ID " + id + " ya ha sido decalarado previamente.", linea);
	        }
	    }

	    public void pushTSL(String id, String tipo, int linea) {
	        Integer se_encuentra = (Integer) TSL.get(id);
	        if(se_encuentra==null) {
	            if(tipo.compareTo("int")==0)
	                TSL.put(id,1);
	            else if(tipo.compareTo("double")==0)
	                TSL.put(id,2);
	            else System.err.println("Tipo desconocido: " + tipo);
	        }
	        else reportError("El ID " + id + " ya ha sido decalarado previamente.", linea);
	    }

	    public int searchID(String id, int linea) {
	        Integer existeTSG = (Integer) TSG.get(id);
	        Integer existeTSL = (Integer) TSL.get(id);

	        if(existeTSL != null) {
	            return existeTSL;
	        } else if (existeTSG != null) {
	            return existeTSG;
	        }

	        reportError("La variable " + id + " no ha sido declarada.", linea);
	        return 3;
	    }

	    public int compareTipo(int id1, int id2) {
	        return id1 == id2 ? id1 : 1;
	    }

	    public void reportError(String mensaje, int linea) {
	        System.err.println(">>MyCompiler>> Error en linea " + linea + ":" + mensaje);
	    }

	    public void displayRecognitionError(String [] tokenNames, RecognitionException e) {
	        String hdr = getErrorHeader(e);
	        String msg = getErrorMessage(e, tokenNames);
	        System.err.println(">>MyCompiler>> Error en linea " + e.line + ":" + e.charPositionInLine + " -> " + msg);
	    } 

	    public void imprimirEnteros() {
	        System.out.println("La cantidad de enteros con parentesis es de: " + cantidadEnteros);
	        cantidadEnterosGlobal = cantidadEnteros + cantidadEnterosGlobal;
	        cantidadEnteros = 0;
	    }

	    // Registro de definiciones de funciones
	    public void registerFunctionDefinition(String className, String functionName) {
	        String fullName = className + "." + functionName;
	        if (!isSpecialMethod(functionName, className)) {
	            definedFunctions.add(fullName);
	            functionCallCount.put(fullName, 0);
	        }
	    }
	    
	    // Generación del informe de optimización
	    public void printOptimizationReport() {
	        System.out.println("\n=== Informe de Optimización ===");
	        boolean foundOptimizable = false;
	        
	        // Funciones nunca llamadas
	        for (String func : definedFunctions) {
	            if (!calledFunctions.contains(func)) {
	                System.out.println("Funcion '" + func + "' nunca es llamada y puede ser eliminada.");
	                foundOptimizable = true;
	            }
	        }
	        
	        // Funciones llamadas una vez
	        for (String func : functionCallCount.keySet()) {
	            if (functionCallCount.get(func) == 1) {
	                System.out.println("Funcion '" + func + "' es llamada solo una vez y puede ser reducida (inlined).");
	                foundOptimizable = true;
	            }
	        }
	        
	        if (!foundOptimizable) {
	            System.out.println("No se encontraron funciones optimizables.");
	        }
	    }



	// $ANTLR start "program"
	// proyecto.g:141:1: program : ( clase )+ ;
	public final void program() throws RecognitionException {
		try {
			// proyecto.g:141:8: ( ( clase )+ )
			// proyecto.g:141:10: ( clase )+
			{
			// proyecto.g:141:10: ( clase )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= PRIVATE && LA1_0 <= PUBLIC)||LA1_0==26) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// proyecto.g:141:10: clase
					{
					pushFollow(FOLLOW_clase_in_program24);
					clase();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			printOptimizationReport();
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "clase"
	// proyecto.g:143:1: clase : ( modificadorAcceso )? 'class' ID '{' ( miembro[currentClassName] )* '}' ;
	public final void clase() throws RecognitionException {
		Token ID1=null;

		try {
			// proyecto.g:143:6: ( ( modificadorAcceso )? 'class' ID '{' ( miembro[currentClassName] )* '}' )
			// proyecto.g:143:8: ( modificadorAcceso )? 'class' ID '{' ( miembro[currentClassName] )* '}'
			{
			// proyecto.g:143:8: ( modificadorAcceso )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= PRIVATE && LA2_0 <= PUBLIC)) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// proyecto.g:143:8: modificadorAcceso
					{
					pushFollow(FOLLOW_modificadorAcceso_in_clase35);
					modificadorAcceso();
					state._fsp--;

					}
					break;

			}

			match(input,26,FOLLOW_26_in_clase38); 
			ID1=(Token)match(input,ID,FOLLOW_ID_in_clase40); 
			currentClassName = (ID1!=null?ID1.getText():null); pushTSG(currentClassName,"class", ID1.getLine());
			match(input,27,FOLLOW_27_in_clase53); 
			// proyecto.g:145:9: ( miembro[currentClassName] )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( ((LA3_0 >= DOUBLE && LA3_0 <= FLOAT)||(LA3_0 >= INT && LA3_0 <= PUBLIC)||(LA3_0 >= STRING && LA3_0 <= VOID)) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// proyecto.g:145:9: miembro[currentClassName]
					{
					pushFollow(FOLLOW_miembro_in_clase55);
					miembro(currentClassName);
					state._fsp--;

					}
					break;

				default :
					break loop3;
				}
			}

			match(input,28,FOLLOW_28_in_clase59); 
			System.out.println("El numero total de enteros con parentesis es: " + cantidadEnterosGlobal);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "clase"



	// $ANTLR start "miembro"
	// proyecto.g:148:1: miembro[String className] : ( metodo[className] | atributo );
	public final void miembro(String className) throws RecognitionException {
		try {
			// proyecto.g:148:26: ( metodo[className] | atributo )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= PRIVATE && LA4_0 <= PUBLIC)) ) {
				int LA4_1 = input.LA(2);
				if ( ((LA4_1 >= DOUBLE && LA4_1 <= FLOAT)||LA4_1==INT||(LA4_1 >= STRING && LA4_1 <= VOID)) ) {
					int LA4_2 = input.LA(3);
					if ( (LA4_2==ID) ) {
						int LA4_3 = input.LA(4);
						if ( (LA4_3==19) ) {
							alt4=1;
						}
						else if ( (LA4_3==COMMA||LA4_3==SEMICOLON) ) {
							alt4=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( ((LA4_0 >= DOUBLE && LA4_0 <= FLOAT)||LA4_0==INT||(LA4_0 >= STRING && LA4_0 <= VOID)) ) {
				int LA4_2 = input.LA(2);
				if ( (LA4_2==ID) ) {
					int LA4_3 = input.LA(3);
					if ( (LA4_3==19) ) {
						alt4=1;
					}
					else if ( (LA4_3==COMMA||LA4_3==SEMICOLON) ) {
						alt4=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// proyecto.g:148:28: metodo[className]
					{
					pushFollow(FOLLOW_metodo_in_miembro74);
					metodo(className);
					state._fsp--;

					}
					break;
				case 2 :
					// proyecto.g:148:48: atributo
					{
					pushFollow(FOLLOW_atributo_in_miembro79);
					atributo();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "miembro"



	// $ANTLR start "metodo"
	// proyecto.g:150:1: metodo[String className] : ( modificadorAcceso )? tipo ID '(' ( decl_args )? ')' '{' ( instruccion )* '}' ;
	public final void metodo(String className) throws RecognitionException {
		Token ID2=null;
		ParserRuleReturnScope tipo3 =null;

		try {
			// proyecto.g:150:25: ( ( modificadorAcceso )? tipo ID '(' ( decl_args )? ')' '{' ( instruccion )* '}' )
			// proyecto.g:150:27: ( modificadorAcceso )? tipo ID '(' ( decl_args )? ')' '{' ( instruccion )* '}'
			{
			// proyecto.g:150:27: ( modificadorAcceso )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( ((LA5_0 >= PRIVATE && LA5_0 <= PUBLIC)) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// proyecto.g:150:27: modificadorAcceso
					{
					pushFollow(FOLLOW_modificadorAcceso_in_metodo87);
					modificadorAcceso();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_tipo_in_metodo90);
			tipo3=tipo();
			state._fsp--;

			ID2=(Token)match(input,ID,FOLLOW_ID_in_metodo92); 
			pushTSG((ID2!=null?ID2.getText():null), (tipo3!=null?input.toString(tipo3.start,tipo3.stop):null), ID2.getLine()); 
			     registerFunctionDefinition(className, (ID2!=null?ID2.getText():null));
			match(input,19,FOLLOW_19_in_metodo105); 
			// proyecto.g:153:9: ( decl_args )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( ((LA6_0 >= DOUBLE && LA6_0 <= FLOAT)||LA6_0==INT||(LA6_0 >= STRING && LA6_0 <= VOID)) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// proyecto.g:153:9: decl_args
					{
					pushFollow(FOLLOW_decl_args_in_metodo107);
					decl_args();
					state._fsp--;

					}
					break;

			}

			match(input,20,FOLLOW_20_in_metodo110); 
			match(input,27,FOLLOW_27_in_metodo117); 
			// proyecto.g:155:9: ( instruccion )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( ((LA7_0 >= DOUBLE && LA7_0 <= FLOAT)||(LA7_0 >= ID && LA7_0 <= INT)||(LA7_0 >= STRING && LA7_0 <= VOID)) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// proyecto.g:155:9: instruccion
					{
					pushFollow(FOLLOW_instruccion_in_metodo128);
					instruccion();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			match(input,28,FOLLOW_28_in_metodo136); 
			TSL.clear();
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "metodo"



	// $ANTLR start "atributo"
	// proyecto.g:158:1: atributo : ( modificadorAcceso )? tipo id1= ID ( COMMA id2= ID )* SEMICOLON ;
	public final void atributo() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope tipo4 =null;

		try {
			// proyecto.g:158:9: ( ( modificadorAcceso )? tipo id1= ID ( COMMA id2= ID )* SEMICOLON )
			// proyecto.g:158:11: ( modificadorAcceso )? tipo id1= ID ( COMMA id2= ID )* SEMICOLON
			{
			// proyecto.g:158:11: ( modificadorAcceso )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( ((LA8_0 >= PRIVATE && LA8_0 <= PUBLIC)) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// proyecto.g:158:11: modificadorAcceso
					{
					pushFollow(FOLLOW_modificadorAcceso_in_atributo145);
					modificadorAcceso();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_tipo_in_atributo148);
			tipo4=tipo();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_atributo152); 
			pushTSG((id1!=null?id1.getText():null), (tipo4!=null?input.toString(tipo4.start,tipo4.stop):null), id1.getLine());
			// proyecto.g:160:5: ( COMMA id2= ID )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==COMMA) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// proyecto.g:160:6: COMMA id2= ID
					{
					match(input,COMMA,FOLLOW_COMMA_in_atributo169); 
					id2=(Token)match(input,ID,FOLLOW_ID_in_atributo173); 
					pushTSG((id2!=null?id2.getText():null), (tipo4!=null?input.toString(tipo4.start,tipo4.stop):null), id2.getLine());
					}
					break;

				default :
					break loop9;
				}
			}

			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_atributo184); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "atributo"



	// $ANTLR start "llamadaFuncion"
	// proyecto.g:163:1: llamadaFuncion : ID '(' ( expr ( ',' expr )* )? ')' ;
	public final void llamadaFuncion() throws RecognitionException {
		Token ID5=null;

		try {
			// proyecto.g:163:15: ( ID '(' ( expr ( ',' expr )* )? ')' )
			// proyecto.g:163:17: ID '(' ( expr ( ',' expr )* )? ')'
			{
			ID5=(Token)match(input,ID,FOLLOW_ID_in_llamadaFuncion191); 
			match(input,19,FOLLOW_19_in_llamadaFuncion193); 
			// proyecto.g:163:24: ( expr ( ',' expr )* )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( ((LA11_0 >= CDOUBLE && LA11_0 <= CINT)||LA11_0==ID||LA11_0==19) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// proyecto.g:163:25: expr ( ',' expr )*
					{
					pushFollow(FOLLOW_expr_in_llamadaFuncion196);
					expr();
					state._fsp--;

					// proyecto.g:163:30: ( ',' expr )*
					loop10:
					while (true) {
						int alt10=2;
						int LA10_0 = input.LA(1);
						if ( (LA10_0==COMMA) ) {
							alt10=1;
						}

						switch (alt10) {
						case 1 :
							// proyecto.g:163:31: ',' expr
							{
							match(input,COMMA,FOLLOW_COMMA_in_llamadaFuncion199); 
							pushFollow(FOLLOW_expr_in_llamadaFuncion201);
							expr();
							state._fsp--;

							}
							break;

						default :
							break loop10;
						}
					}

					}
					break;

			}

			match(input,20,FOLLOW_20_in_llamadaFuncion207); 
			registerFunctionCall(currentClassName, (ID5!=null?ID5.getText():null));
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "llamadaFuncion"



	// $ANTLR start "instruccion"
	// proyecto.g:166:1: instruccion : ( asignacion | decl_local | llamadaFuncion SEMICOLON );
	public final void instruccion() throws RecognitionException {
		try {
			// proyecto.g:166:12: ( asignacion | decl_local | llamadaFuncion SEMICOLON )
			int alt12=3;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==ID) ) {
				int LA12_1 = input.LA(2);
				if ( (LA12_1==25) ) {
					alt12=1;
				}
				else if ( (LA12_1==19) ) {
					alt12=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 12, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( ((LA12_0 >= DOUBLE && LA12_0 <= FLOAT)||LA12_0==INT||(LA12_0 >= STRING && LA12_0 <= VOID)) ) {
				alt12=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}

			switch (alt12) {
				case 1 :
					// proyecto.g:166:14: asignacion
					{
					pushFollow(FOLLOW_asignacion_in_instruccion221);
					asignacion();
					state._fsp--;

					}
					break;
				case 2 :
					// proyecto.g:166:27: decl_local
					{
					pushFollow(FOLLOW_decl_local_in_instruccion225);
					decl_local();
					state._fsp--;

					}
					break;
				case 3 :
					// proyecto.g:166:40: llamadaFuncion SEMICOLON
					{
					pushFollow(FOLLOW_llamadaFuncion_in_instruccion229);
					llamadaFuncion();
					state._fsp--;

					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_instruccion231); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "instruccion"



	// $ANTLR start "asignacion"
	// proyecto.g:168:1: asignacion : ID '=' expr SEMICOLON ;
	public final void asignacion() throws RecognitionException {
		Token ID6=null;
		ParserRuleReturnScope expr7 =null;

		try {
			// proyecto.g:168:11: ( ID '=' expr SEMICOLON )
			// proyecto.g:168:13: ID '=' expr SEMICOLON
			{
			ID6=(Token)match(input,ID,FOLLOW_ID_in_asignacion238); 
			match(input,25,FOLLOW_25_in_asignacion240); 
			pushFollow(FOLLOW_expr_in_asignacion242);
			expr7=expr();
			state._fsp--;


			        int tipoVar = searchID((ID6!=null?ID6.getText():null), ID6.getLine());
			        if(tipoVar != (expr7!=null?((proyectoParser.expr_return)expr7).code:0)) {
			            reportError("No se puede asignar un valor de tipo " + (expr7!=null?((proyectoParser.expr_return)expr7).code:0) + 
			                        " a la variable '" + (ID6!=null?ID6.getText():null) + "' de tipo " + tipoVar, 
			                        ID6.getLine());
			        }

			        // Determinar si la expresión es reducible (estática)
			        if ((expr7!=null?((proyectoParser.expr_return)expr7).isStatic:0) == 1) {
			            System.out.println(">> Asignacion a '" + (ID6!=null?ID6.getText():null) + "' es reducible.");
			            tablaBTA.put((ID6!=null?ID6.getText():null), 1);
			        } else {
			            System.out.println(">> Asignacion a '" + (ID6!=null?ID6.getText():null) + "' NO es reducible.");
			            tablaBTA.put((ID6!=null?ID6.getText():null), 0);
			        }

			        imprimirEnteros();
			    
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_asignacion255); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "asignacion"



	// $ANTLR start "decl_args"
	// proyecto.g:191:1: decl_args : tipo1= tipo id1= ID ( COMMA tipo2= tipo id2= ID )* ;
	public final void decl_args() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope tipo1 =null;
		ParserRuleReturnScope tipo2 =null;
